# telegram_news_feed_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
db_migrations/: env.py  script.py.mako
db_migrations/versions/: afe13decf493_initial_schema.py
docker/bot/: Dockerfile
docker/dispatcher/: Dockerfile
docker/migration/: Dockerfile
docker/poller/: Dockerfile
k8s/: certificate.yaml  clusterissuer-letsencrypt-prod.yaml  configmap.yaml  deployment.yaml  ingressroute.yaml  migration-job.yaml  nats.yaml  postgres.yaml  service.yaml  traefik.yaml
scripts/: check_layer_imports.py
src/bot/: commands.py  main.py  runtime.py
src/bot/mini_app/: api.py  auth.py  models.py
src/config/: configs.py  logging.py
src/configs/: configs.py
src/dispatcher/: main.py  runtime.py
src/domain/: posts.py
src/entrypoints/: __init__.py
src/entrypoints/bot/: commands.py  main.py  runtime.py
src/entrypoints/dispatcher/: main.py  runtime.py
src/entrypoints/poller/: main.py  runtime.py
src/infrastructure/database/: models.py
src/infrastructure/messaging/: events.py
src/infrastructure/telegram/: __init__.py  bot_api.py  errors.py  media_downloader.py  message_formatter.py  uploads.py  web_preview_client.py  web_preview_parser.py
src/models/: delivery.py  events.py
src/orm/: database.py
src/poller/: main.py  runtime.py
src/services/: channels.py  discovery.py  dispatcher.py  nats.py  poller.py  settings.py  telegram_api.py
src/use_cases/: __init__.py  deliver_posts.py  discover_posts.py  manage_channels.py  manage_settings.py
src/utils/: telegram.py
tests/unit/: conftest.py
tests/unit/bot/: test_commands.py
tests/unit/models/: test_events.py
tests/unit/services/: test_discovery.py  (+1 more)
(+16 files in other folders)
